--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,15 @@
 </head>
 <body>
 
+<div>
+<% if current_user %>
+  Welcome, <%= current_user.name %>!
+  <%= link_to 'Logout', logout_path, id: 'logout' %>
+<% else %>
+  <%= link_to 'Login with Google', '/auth/google_oauth2', id: 'login' %>
+<% end %>
+</div>
+
 <%= yield %>
 
 </body>
