--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,19 @@
+@import 'bootstrap-sprockets';
+@import 'bootstrap';
+
 body {
   padding-top: 70px;
+}
+
+#form-errors {
+  color: #f00;
+  ul {
+    list-style: none;
+    margin: 0 0 18px 0;
+  }
+}
+
+.field_with_errors {
+  @extend .form-group;
+  @extend .has-error;
 }
