--- a/app/views/friendships/_form.html.erb
+++ b/app/views/friendships/_form.html.erb
@@ -1,17 +1,6 @@
-<%= form_for(@friendship) do |f| %>
-  <% if @friendship.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@friendship.errors.count, "error") %> prohibited this friendship from being saved:</h2>
-
-      <ul>
-      <% @friendship.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="actions">
-    <%= f.submit %>
+<%= form_for @friendship, html: { role: 'form' } do |f| %>
+  <%= render 'form_messages', object: @friendship %>
+  <div class="form-group">
+    <%= f.submit class: 'btn btn-primary' %>
   </div>
 <% end %>
