--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,10 @@
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li><%= link_to 'Home', root_path %></li>
+        <% if current_user %>
+          <li><%= link_to 'Users', users_path %></li>
+          <li><%= link_to 'Friendships', friendships_path %></li>
+        <% end %>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if current_user %>
