--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,10 +3,10 @@
 <table class="table table-striped table-hover">
   <thead>
     <tr>
-      <td>Name</td>
-      <td>Created</td>
-      <td>Updated</td>
-      <td>Actions</td>
+      <th>Name</th>
+      <th>Created</th>
+      <th>Updated</th>
+      <th>Actions</th>
     </tr>
   </thead>
   <tbody>
