--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Finduslunch</title>
+  <title>Find Us Lunch</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -23,8 +23,8 @@
       <ul class="nav navbar-nav">
         <li><%= link_to 'Home', root_path %></li>
         <% if current_user %>
+          <li><%= link_to 'Friends', friendships_path %></li>
           <li><%= link_to 'Users', users_path %></li>
-          <li><%= link_to 'Friendships', friendships_path %></li>
         <% end %>
       </ul>
       <ul class="nav navbar-nav navbar-right">
