--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
         <li><%= link_to 'Home', root_path %></li>
         <% if current_user %>
           <li><%= link_to 'Friends', friendships_path %></li>
+          <li><%= link_to 'Lunches', lunches_path %></li>
           <li><%= link_to 'Users', users_path %></li>
         <% end %>
       </ul>
